--- a/Employee1/Employee1.csproj
+++ b/Employee1/Employee1.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Employees.Designer.cs">
       <DependentUpon>Employees.cs</DependentUpon>
     </Compile>
+    <Compile Include="Functions.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
